syntax = "proto3";

import "google/protobuf/empty.proto";

package org.rococo.grpc;

option java_multiple_files = true;
option java_package = "org.rococo.grpc";
option java_outer_classname = "RococoArtistsProto";

service RococoArtistsService {
  rpc GetAll (ArtistsPageRequest) returns (ArtistsPageResponse) {}
  rpc FindArtistById (ArtistByIdRequest) returns (ArtistResponse) {}
  rpc UpdateArtist(ArtistRequest) returns (ArtistResponse) {}
  rpc AddArtist(ArtistRequest) returns (ArtistResponse) {}
  rpc DeleteArtist (ArtistByIdRequest) returns (google.protobuf.Empty) {}
}

message ArtistRequest {
  Artist artist = 1;
}

message ArtistResponse {
  Artist artist = 1;
}

message ArtistsPageRequest {
  optional string title = 1;
  int32 page = 2;
  int32 size = 3;
}

message ArtistsPageResponse {
  int64 totalElements = 1;
  int64 totalPages = 2;
  bool first = 3;
  bool last = 4;
  int64 size = 5;
  repeated Artist artists = 6;
}

message ArtistByIdRequest {
  string artistId = 1;
}

message Artist {
  string id = 1;
  string name = 2;
  string bio = 3;
  string photo = 4;
}